# SpriteLight

./: Makefile  README.md  callgrind.out.10982  compile_commands.json  engine_test  engine_test_static  libSDL3.so.0.0.0  merge_headers.sh  meson.build  perf.data  rename_symbols.py
SpriteLight/: meson.build
SpriteLight/engine_include/: SpriteLight.h  audio.h  draw.h  engine.h  general.h  includes.h  input.h  lights.h  main.h  resource_mgr.h  shader.h  texture.h
SpriteLight/include/: engine.h  msdfgl.h.in  win_include.h
SpriteLight/include/GLFW/: glfw3.h  glfw3native.h
SpriteLight/include/win/SDL2/: SDL_atomic.h  SDL_audio.h  SDL_gamecontroller.h  SDL_main.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_stdinc.h  SDL_system.h  SDL_syswm.h  SDL_timer.h  SDL_video.h  SDL_vulkan.h
SpriteLight/resources/shaders/: post_process.frag
SpriteLight/src/: audio.c  bloom.c  buffers.c  convexpoly.c  definitions.c  draw.c  glad.c  init.c  input.c  lights.c  main.c  resource_mgr.c  shader.c  texture.c  update.c
include/: container.h  def.h  engine.h  msdfgl.h.in  win_include.h
include/SDL3/: SDL_revision.h
include/win/SDL2/: SDL.h  SDL_blendmode.h  SDL_events.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_locale.h  SDL_mouse.h  SDL_mutex.h  SDL_quit.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_shape.h  SDL_surface.h  SDL_thread.h
resources/shaders/: rec.frag  text.vert  tri.vert
resources/shaders/engine/: quad.frag  quad.vert  sdf_text.frag  sdf_text.vert  test.frag  text_world.vert
resources/shaders/ui/: gradient.frag  screen_space.vert  ui.vert
src/: main.c
